[tool.poetry]
name = "thoughtful-ai-tech-screen"
version = "0.1.0"
description = ""
authors = ["JP Sheehan <jp.sheehan2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
openai = "^1.46.0"
langchain-openai = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
